--- a/css/style.css
+++ b/css/style.css
@@ -3,28 +3,40 @@ h1{
   text-transform: none;
   color: black;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   letter-spacing: -1px;
-  font-size: 60px;
+  font-size: 40px;
   line-height: 74px;
-  padding-top: 40px;
+  padding-top: 20px;
+  padding-top: 5px;
+  letter-spacing: 2px;
 }
-p {
+
+h2{
+  text-transform: none;
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 50;
+  letter-spacing: 3px;
+  font-size: 13px;
+  
+}
+
+
+p  {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
   font-size: 20px;
-  margin: 0;
+  letter-spacing: 1.5px;
+  margin: auto;
+  padding-top: 20px;
 }
 .bg-content {
   background: url('../img/city.png') no-repeat center top;
   background-size: cover;
-  min-height: 800px;
+  min-height: 400px;
   position: relative;
 }
-
-.social-links {
-  color: black;
-  font-size: 20px;
-}
-
 
 .social-links i {
   font-size: 40px;
@@ -36,4 +48,8 @@ p {
   font-size: 20px;
   font-weight: 600;
   padding-top: 60px;
+}
+
+.card {
+  margin:auto;
 }
